<resources>
    <string name="app_name">RamzPouya</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="number_chars">Number of Chars</string>
    <string name="number_numbers">Number of Numbers</string>
    <string name="number_specials">Number of Specials</string>
    <string name="total_sum">TOTAL SUM</string>
</resources>